--- a/src/Css/index.scss
+++ b/src/Css/index.scss
@@ -1,4 +1,4 @@
-@import "./settings/settings.scss";
+@import "./Settings/settings.scss";
 
 @import "./Components/components.scss";
 @import "./Elements/elements.scss";
