--- a/src/Css/Components/components.scss
+++ b/src/Css/Components/components.scss
@@ -6,6 +6,11 @@
   margin-top: 1rem;
 }
 
+.big-paragraph {
+  font-family: $header-font !important;
+  font-size: 2.3em;
+}
+
 .carousel {
   a.carousel-control-next {
     &::hover {
