--- a/src/Css/Objects/objects.scss
+++ b/src/Css/Objects/objects.scss
@@ -19,9 +19,13 @@
   background-color: transparent !important;
 
   &.no-border {
+    border-width: 0px !important;
+  }
+  &.border-bottom {
     border-top-width: 0px !important;
     border-right-width: 0px !important;
     border-left-width: 0px !important;
+    border-bottom-width: 4px !important;
   }
   .card-body {
     background-color: transparent !important;
