--- a/src/Css/Objects/objects.scss
+++ b/src/Css/Objects/objects.scss
@@ -15,6 +15,11 @@
 .card {
   border-style: solid !important;
   border-width: 4px !important;
+  .card-body {
+    padding: 0.9rem;
+  }
+  // border-left-width: 4px !important;
+  // border-right-width: 4px !important;
   border-radius: 0px !important;
   background-color: transparent !important;
 
@@ -40,7 +45,7 @@
     font-weight: 300 !important;
     font-style: italic;
     font-size: 25px;
-    height: 25px !important;
+    min-height: 38px !important;
   }
 }
 
