--- a/src/Css/Tools/tools.scss
+++ b/src/Css/Tools/tools.scss
@@ -1,3 +1,19 @@
 .align-center {
   text-align: center;
 }
+
+.border-right {
+  border-right-width: 4px !important;
+}
+
+.border-left {
+  border-left-width: 4px !important;
+}
+
+.border-top {
+  border-top-width: 4px !important;
+}
+
+.border-bottom {
+  border-bottom-width: 4px !important;
+}
